# fckuipaid

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  test_proof_generation.sh
backend/: Cargo.toml
backend/src/: main.rs  types.rs
boundless/: Cargo.toml
boundless/apps/: Cargo.toml
boundless/contracts/src/: Counter.sol
boundless/methods/: Cargo.toml  build.rs
boundless/methods/guest/: Cargo.toml
fckuipaid/broadcast/PaymentReceiver.s.sol/421614/: run-1750508079.json  run-1750509427.json
fckuipaid/script/: PaymentReceiver.s.sol
fckuipaid/src/: PaymentReceiver.sol  PaymentToken.sol
frontend/: package.json
frontend/src/: App.jsx  config.js  main.jsx  walletOption.jsx
frontend/src/components/GenerateProof/: contract.js  generateProof.css  generateProof.jsx  subscriptions.js
frontend/src/components/VerifyProof/: verifyContract.js  verifyProof.css  verifyProof.jsx
frontend/src/components/header/: header.css  header.jsx
frontend/src/components/headerVTK/: headervtk.css  headervtk.jsx
