[workspace]
resolver = "2"
members = [
    "backend"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]

# ZK and Blockchain
boundless-market = "0.10.0"
alloy = { version = "1.0", features = ["full"] }

# risc0-ethereum dependencies.
risc0-zkvm = { version = "2.1", features = ["prove"] }
risc0-build = "2.1"
risc0-build-ethereum = { version = "2.2" }
risc0-ethereum-contracts = { version = "2.2" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.0" }

# Web framework
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.41", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
hex = "0.4"
bincode = "1.3"
sha2 = "0.10"
sha3 = "0.10"
chrono = "0.4"
clap = "4.5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# risc0 monorepo dependencies

# alloy dependencies
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }

# other dependencies
bytemuck = { version = "1.16" }
futures-util = "0.3"
futures = "0.3"
log = { version = "0.4" }
test-log = { version = "0.2", features = ["trace"] }
revm-primitives = "19.0"


[profile.release]
debug = 1
lto = "thin"


