[package]
name = "fckuipaid-methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { version = "2.0", features = ["unstable"] }
risc0-build-ethereum = { version = "2.2" }
risc0-zkp = { version = "2.0", default-features = false }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true }
