[package]
name = "fckuipaid-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payment_check"
path = "src/bin/payment_check.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0" }
revm-primitives = { version = "19.0" }
risc0-bigint2 = { version = "1.4" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "main" }
risc0-zkvm = { version = "2.1", default-features = false, features = ["std", "unstable"] }

[patch.crates-io]
# enable RISC Zero's precompiles
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
